--- a/FBPushScript.html
+++ b/FBPushScript.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+	<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script> 
+	<script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
+	
+</head>
+<body>
+
 <script>
 $( document ).ready(function() {
   console.log("hello world!");
@@ -32,3 +40,5 @@ $( document ).ready(function() {
 	});
 });
 </script>
+</body>
+</html>
