--- a/home.html
+++ b/home.html
@@ -12,19 +12,25 @@
     <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
 </head>
 <body ng-controller="CodehuntCtrl">
-	<form class="form-wrapper cf">
+	 <form class="form-wrapper cf">
         <input type="text" placeholder="HTML, CSS, JS, Python,..." required>
         <button type="submit">Search</button>
     </form>
-      <!-- push a new message into the array -->
+    <div class="content">
     <ul>
-      <li style="color:white" ng-repeat="resource in resources | orderBy:'upvotes':true">
+      <li ng-repeat="resource in resources | orderBy:'upvotes':true">
+        <span class="button" ng-click="addVote(resource)">
+        </span>
+        <p>{{resource.upvotes}}</p>
+        <a href="#">{{resource.name}}</a>
+        <p>${{resource.price}} | {{resource.type}}</p>
+      </li>
         <!-- {{resource.name}}
         {{resource.language}}
         {{resource.cost}}
         {{resource.type}}
         votes: {{resource.upvotes}} -->
-        {{resource}}
+        <!-- {{resource}} -->
         <!-- {{resource.downvotes}} -->
         <!-- <input ng-model="resource.name" ng-change="resources.$save(resources)" /> -->
         <!-- <button ng-click="resources.$remove(resource)">X</button> -->
@@ -32,15 +38,16 @@
       </li>
     </ul>
       
-    <form ng-submit="addResource(name, language, cost, type, upvotes, downvotes)">
+    <form ng-submit="addResource(name, language, price, type, upvotes, downvotes)">
       <input ng-model="name" />
       <input ng-model="language" />
-      <input ng-model="cost" />
+      <input ng-model="price" />
       <input ng-model="type" />
       <input ng-model="upvotes" type="number"/>
       <input ng-model="downvotes" type="number" />
       <button type="submit">add resource</button>
     </form>
+  </div>
   
 <script>
   var app = angular.module("codehuntApp", ["firebase"]);
@@ -49,8 +56,8 @@
     var ref = new Firebase("https://codehunt.firebaseio.com/resources");
     var sync = $firebase(ref);
     $scope.resources = sync.$asArray();
-    $scope.addResource = function(n,l,c,t,u,d) {
-      $scope.resources.$add({name: n, language: l, cost: c, type: t, upvotes: u, downvotes: d});
+    $scope.addResource = function(n,l,p,t,u,d) {
+      $scope.resources.$add({name: n, language: l, price: p, type: t, upvotes: u, downvotes: d});
     }
     $scope.addVote = function(resource) {
       // $scope.plusOne = $scope.resource."upvotes"++;
